Fix text alignment title
ERM27165

[4.1.x]

--- a/resources/stylesheets/structure/sidebar-primary.sm.css
+++ b/resources/stylesheets/structure/sidebar-primary.sm.css
@@ -2,3 +2,7 @@
 	overflow: auto;
 	height: calc( 100vh - calc( 15px + calc( 2 * var(--navbar-primary-height )) ));
 }
+
+#sb-pri .card-header.menu-title {
+	text-align: left;
+}
